Fixed text alignment on hero.

--- a/style/bem/home.css
+++ b/style/bem/home.css
@@ -1,6 +1,6 @@
 main
 {
-    margin-top: 0rem;
+    padding-top: 0rem;
 }
 
 .purpose, .projects, .about
